Add Heavyweight Locking